--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,10 +1,8 @@
 .menu-item {
-  flex: 1 1 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 7.5px 15px;
-  overflow: hidden;
 
   &:hover {
     cursor: pointer;
@@ -20,13 +18,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
     opacity: 0.7;
 
     .title {
-      font-weight: bold;
       margin: 0 6px 0;
-      font-size: 22px;
+      font-size:medium;
     }
   }
 }
